fix: arruma bug do yt-dlp nao finalizar o green thread

--- a/web/index.html
+++ b/web/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -13,7 +12,6 @@
     <script src="{{ url_for('static', filename='js/socket.io.min.js') }}"></script>
     <meta name="robots" content="noindex, nofollow">
 </head>
-
 <body>
     <div class="container">
         <main>
@@ -47,113 +45,23 @@
             <p id="status"></p>
         </main>
     </div>
-
     <footer>
         <div class="footer-content">
             <p>
                 Powered by <a href="https://github.com/yt-dlp/yt-dlp" target="_blank" rel="noopener">yt-dlp</a>
             </p>
             <div class="footer-links">
-                <a href="https://github.com/yt-dlp/yt-dlp/blob/master/supportedsites.md">Sites suportados</a>
-                <span class="footer-separator">•</span>
+                <!-- <a href="https://github.com/yt-dlp/yt-dlp/blob/master/supportedsites.md">Sites suportados</a>
+                <span class="footer-separator">•</span> -->
                 <a href="https://github.com/yt-dlp/yt-dlp" target="_blank" rel="noopener">GitHub yt-dlp</a>
                 <span class="footer-separator">•</span>
                 <a href="https://github.com/joaopedroleonel" target="_blank" rel="noopener">GitHub do criador</a>
             </div>
             <p class="footer-copyright">
-                &copy; {{ year }} VideoDownloader. Todos os direitos reservados.
+                &copy; {{ year }} Video Downloader. Todos os direitos reservados.
             </p>
         </div>
     </footer>
-
-    <script>
-        function resetIu() {
-            document.getElementById('download-btn').removeAttribute('disabled');
-            document.getElementById('url').value = '';
-            document.getElementById('playlist').checked = false;
-        }
-
-        document.getElementById('url').addEventListener('input', function (event) {
-            if((event.target.value).toLowerCase().includes('playlist')){
-                document.getElementById('playlist').checked = true;
-            } else {
-                document.getElementById('playlist').checked = false;
-            }
-        });
-
-        document.getElementById('form').addEventListener('submit', async function (event) {
-            event.preventDefault();
-            document.getElementById('status').textContent = '';
-
-            const url = document.getElementById('url').value;
-            const isPlaylist = document.getElementById('playlist').checked;
-            const format = document.querySelector('input[name="format"]:checked').value;
-
-            const payload = {
-                'playlist': isPlaylist,
-                'type': Number(format),
-                'url': url
-            }
-
-            if (url) {
-                try {
-                    const downloadBtn = document.getElementById('download-btn');
-                    downloadBtn.setAttribute('disabled', '');
-                    const statusElement = document.getElementById('status');
-                    statusElement.textContent = 'Conectando ao servidor.';
-
-                    const response = await fetch("/initDownload", {
-                        method: "POST",
-                        headers: {
-                            "Content-Type": "application/json",
-                            "Accept": "application/json"
-                        },
-                        body: JSON.stringify(payload)
-                    });
-
-                    if (response.ok) {
-                        const data = await response.json();
-                        if (data && data.uuid) {
-                            const socket = io();
-                            const jobId = data.uuid;
-
-                            socket.emit('checkStatus', { jobId });
-
-                            socket.on('statusUpdate', (checkData) => {
-                                if (checkData.status) {
-                                    statusElement.textContent = checkData.msg;
-
-                                    if (checkData.status === 'finally') {
-                                        const link = document.createElement('a');
-                                        link.href = `/download/${jobId}`;
-                                        link.download = '';
-                                        link.click();
-                                        resetIu();
-                                        socket.disconnect();
-                                    }
-
-                                    if (checkData.status === 'error') {
-                                        document.getElementById('download-btn').removeAttribute('disabled');
-                                        socket.disconnect();
-                                    }
-                                } else if (checkData.error) {
-                                    statusElement.textContent = 'O download do vídeo não pôde ser realizado.';
-                                    document.getElementById('download-btn').removeAttribute('disabled');
-                                    socket.disconnect();
-                                }
-                            });
-                        }
-                    } else {
-                        statusElement.textContent = 'O download do vídeo não pôde ser realizado.';
-                        document.getElementById('download-btn').removeAttribute('disabled');
-                    }
-                } catch (error) {
-                    statusElement.textContent = 'O download do vídeo não pôde ser realizado.';
-                    document.getElementById('download-btn').removeAttribute('disabled');
-                }
-            }
-        });
-    </script>
+    <script src="{{ url_for('static', filename='js/home.min.js') }}"></script>
 </body>
-
 </html>
