--- a/web/auth.html
+++ b/web/auth.html
@@ -14,7 +14,6 @@
 <body>
     <div class="container">
         <main class="download-box">
-            
             <form id="form" class="form-group" style="margin-bottom: 0px !important;">
                 <label for="password" class="required">Senha:</label>
                 <input type="text" id="password" placeholder="Digite a senha aqui" required>
@@ -26,40 +25,6 @@
             <p id="text-error">Senha incorreta.</p>
         </main>
     </div>
-    <script>
-        document.getElementById('form').addEventListener('submit', async function(event) {
-            event.preventDefault();
-            document.getElementById('text-error').style.display = "none";
-
-            const payload = {
-                'password': document.getElementById('password').value
-            }
-
-            const loginBtn = document.getElementById('login-btn');
-            loginBtn.setAttribute('disabled', '');
-
-            await fetch('/auth', {
-                method: 'POST', 
-                body: JSON.stringify(payload), 
-                headers: {
-                    'Content-Type': 'application/json',
-                }
-            })
-            .then(async (response) => {
-                if(response.ok) {
-                    window.location.href = '/';
-                } else {
-                    document.getElementById('text-error').style.display = "block";
-                }
-                
-            })
-            .catch(() => {
-                document.getElementById('text-error').style.display = "block";
-            })
-            .finally(() => {
-                loginBtn.removeAttribute('disabled');
-            })
-        });
-    </script>
+    <script src="{{ url_for('static', filename='js/auth.min.js') }}"></script>
 </body>
 </html>
