--- a/web/index.html
+++ b/web/index.html
@@ -13,8 +13,8 @@
     <meta name="robots" content="noindex, nofollow">
 </head>
 <body>
-    <div class="container">
-        <main>
+    <main class="container">
+        <section>
             <h2>Baixar vídeo</h2>
             <form id="form">
                 <div class="form-group" style="margin-bottom: .7rem">
@@ -43,16 +43,14 @@
                 <button id="download-btn" type="submit">Baixar</button>
             </form>
             <p id="status"></p>
-        </main>
-    </div>
+        </section>
+    </main>
     <footer>
         <div class="footer-content">
             <p>
                 Powered by <a href="https://github.com/yt-dlp/yt-dlp" target="_blank" rel="noopener">yt-dlp</a>
             </p>
             <div class="footer-links">
-                <!-- <a href="https://github.com/yt-dlp/yt-dlp/blob/master/supportedsites.md">Sites suportados</a>
-                <span class="footer-separator">•</span> -->
                 <a href="https://github.com/yt-dlp/yt-dlp" target="_blank" rel="noopener">GitHub yt-dlp</a>
                 <span class="footer-separator">•</span>
                 <a href="https://github.com/joaopedroleonel" target="_blank" rel="noopener">GitHub do criador</a>
